# lib-cli-utils

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  NOTICE  README.md  ROADMAP.md  TECH-STACK.md  pyproject.toml
docs/: docs-registry.yaml
docs/user-guide/: README.md  api-reference.md  getting-started.md
docs/user-guide/guides/: chaining-limitation.md
src/cli_utils/: __init__.py  colorstr.py  log_formatter.py
src/shell/: colorstr.sh
src/typescript/: colorstr.test.ts  colorstr.ts  package-lock.json  package.json  tsconfig.json
tests/: test_colorstr.py  test_log_formatter.py
