[project]
name = "lib-cli-utils"
version = "0.1.0"
description = "A utility library for CLI operations"
requires-python = ">=3.13"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cli_utils"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""